--- a/app/src/main/res/layout/activity_driver_main.xml
+++ b/app/src/main/res/layout/activity_driver_main.xml
@@ -6,6 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".activity.driver.DriverMainActivity">
 
+    <ToggleButton
+        android:id="@+id/stateBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/driverMainToolbar"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="20dp" />
+
+    <TextView
+        android:id="@+id/driverState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/stateBtn"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
+        android:text=""
+        android:visibility="invisible" />
+
     <com.google.android.material.appbar.AppBarLayout android:id="@+id/appbar"
         android:layout_width="match_parent" android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
@@ -33,6 +51,7 @@
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/appbar"
         android:orientation="vertical">
 
 
@@ -44,9 +63,9 @@
 
         <!-- The navigation drawer -->
         <RelativeLayout
+            android:id="@+id/drawerPane"
             android:layout_width="280dp"
             android:layout_height="match_parent"
-            android:id="@+id/drawerPane"
             android:layout_gravity="start">
 
             <!-- Profile Box -->
@@ -56,15 +75,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:background="@color/material_blue_grey_800"
-                android:padding="8dp" >
+                android:padding="8dp">
 
                 <ImageView
                     android:id="@+id/avatar"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/user_icon"
                     android:layout_marginTop="15dp"
-                    android:contentDescription="@string/description" />
+                    android:contentDescription="@string/description"
+                    android:src="@drawable/user_icon" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -72,7 +91,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="15dp"
                     android:layout_toEndOf="@+id/avatar"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/userName"
@@ -92,39 +111,14 @@
                 android:layout_width="280dp"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/profileBox"
-                android:choiceMode="singleChoice"
-                android:background="#ffffffff" />
+                android:background="#ffffffff"
+                android:choiceMode="singleChoice" />
 
         </RelativeLayout>
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
-    <TextView
-        android:id="@+id/driverMainText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/main_menu"
-        android:textColor="#E1BEE7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <ToggleButton
-        android:id="@+id/stateBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/driverMainToolbar"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="20dp" />
 
-    <TextView
-        android:id="@+id/driverState"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/stateBtn"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:text=""
-        android:visibility="invisible" />
+
 </RelativeLayout>
