--- a/app/src/main/res/layout/activity_driver_main.xml
+++ b/app/src/main/res/layout/activity_driver_main.xml
@@ -1,124 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.driver.DriverMainActivity">
 
-    <ToggleButton
-        android:id="@+id/stateBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/driverMainToolbar"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="20dp" />
-
-    <TextView
-        android:id="@+id/driverState"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/stateBtn"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:text=""
-        android:visibility="invisible" />
-
-    <com.google.android.material.appbar.AppBarLayout android:id="@+id/appbar"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
-            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:layout_scrollFlags="scroll|enterAlways">
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/driverMainToolbar"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+    <FrameLayout
+        android:id="@+id/flFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawerLayout"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/appbar"
-        android:orientation="vertical">
-
-
-        <!-- The main content view -->
-        <RelativeLayout
-            android:id="@+id/mainContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <!-- The navigation drawer -->
-        <RelativeLayout
-            android:id="@+id/drawerPane"
-            android:layout_width="280dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start">
-
-            <!-- Profile Box -->
-
-            <RelativeLayout
-                android:id="@+id/profileBox"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:background="@color/material_blue_grey_800"
-                android:padding="8dp">
-
-                <ImageView
-                    android:id="@+id/avatar"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="15dp"
-                    android:contentDescription="@string/description"
-                    android:src="@drawable/user_icon" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="42dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="15dp"
-                    android:layout_toEndOf="@+id/avatar"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/userName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/user"
-                        android:textColor="#fff"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-            </RelativeLayout>
-
-            <!-- List of Actions (pages) -->
-            <ListView
-                android:id="@+id/navList"
-                android:layout_width="280dp"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/profileBox"
-                android:background="#ffffffff"
-                android:choiceMode="singleChoice" />
-
-        </RelativeLayout>
-
-    </androidx.drawerlayout.widget.DrawerLayout>
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"/>
 
 
 
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
