--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="padding">16dp</dimen>
     <dimen name="listview_item_padding">16dp</dimen>
+    <dimen name="title">32sp</dimen>>
+    <dimen name="long_width">350sp</dimen>
 </resources>
