--- a/app/src/debug/res/values/colors.xml
+++ b/app/src/debug/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="mango_yellow">#FDB600</color>
     <color name="dark_orange">#FF5C00</color>
+    <color name="light_gray">#D8D8D8</color>
 </resources>
