--- a/app/src/debug/res/values/colors.xml
+++ b/app/src/debug/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="mango_yellow">#FDB600</color>
     <color name="dark_orange">#FF5C00</color>
     <color name="light_gray">#D8D8D8</color>
+    <color name="dark_gray">#5A5A5A</color>
 </resources>
