--- a/app/src/main/res/layout/fragment_driver_current_ride.xml
+++ b/app/src/main/res/layout/fragment_driver_current_ride.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.driver.DriverCurrentRideFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white" >
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/address_input">
+        android:id="@+id/driver_ride_details">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +27,8 @@
                 android:padding="10dp"
                 android:text="@string/your_current_ride"
                 android:textColor="@color/dark_gray"
-                android:textSize="30dp" />
+                android:textSize="30dp"
+                android:layout_marginBottom="10dp"/>
 
             <TextView
                 android:id="@+id/driver_start_location"
@@ -76,7 +78,7 @@
                     android:layout_weight="1"
                     android:text="Price:"
                     android:textColor="@color/black"
-                    android:textSize="18dp"
+                    android:textSize="15dp"
                     android:drawableStart="@drawable/dollar_icon"
                     android:alpha="0.8"/>
 
@@ -87,18 +89,18 @@
                     android:layout_weight="1"
                     android:text="Duration: "
                     android:textColor="@color/black"
-                    android:textSize="18dp"
+                    android:textSize="15dp"
                     android:drawableStart="@drawable/time_icon"
                     android:alpha="0.8"/>
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/driver_distance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Distance:"
                     android:drawableStart="@drawable/run_icon"
-                    android:textSize="18dp"
+                    android:textSize="15dp"
                     android:alpha="0.8"
                     android:textColor="@color/black"
                     />
@@ -117,6 +119,8 @@
             android:textColor="@color/dark_gray"
             android:layout_gravity="center"
             android:id="@+id/end_ride_button"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
             >
 
         </Button>
