--- a/app/src/main/res/layout/activity_driver_inbox.xml
+++ b/app/src/main/res/layout/activity_driver_inbox.xml
@@ -1,9 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.driver.DriverInboxActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="60dp"
+        android:theme="?attr/actionBarTheme"
+        android:backgroundTint="#FDB600"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="60dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/previous_icon_white"
+            android:background="#00000000"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"/>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="40"
+            android:gravity="center"
+            android:minHeight="?attr/actionBarSize"
+            android:text="@string/conversations"
+            android:textColor="@color/white"
+            android:textSize="30dp" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/search_icon_white"
+            android:background="#00000000"
+            android:layout_gravity="center"/>
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/options_icon_white"
+            android:background="#00000000"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_weight="1"
+        tools:srcCompat="@tools:sample/avatars"
+        android:layout_marginTop="80dp"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/round_edges"
+        android:clipToOutline="true"/>
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:layout_marginStart="130dp"
+        android:text="@string/customer_support"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+
+        />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello Aleksandra, we are..."
+        android:layout_marginTop="115dp"
+        android:layout_marginStart="150dp"
+        android:textSize="15dp"/>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/pin_icon"
+        android:layout_marginTop="80dp"
+        android:layout_marginStart="320dp"
+        android:rotation="40"
+        android:alpha="0.8"/>
+
+    <View
+        android:layout_marginTop="160dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c0c0c0"/>
+
+
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_weight="1"
+        tools:srcCompat="@tools:sample/avatars"
+        android:layout_marginTop="180dp"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/round_edges"
+        android:clipToOutline="true"/>
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:layout_marginStart="130dp"
+        android:text="Patricia Bjelogrlic"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+
+        />
+
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You are late!!! I will be..."
+        android:layout_marginTop="215dp"
+        android:layout_marginStart="150dp"
+        android:textSize="15dp"/>
+
+
+    <View
+        android:layout_marginTop="260dp"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c0c0c0"/>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_marginTop="230dp"
+        android:layout_marginStart="330dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="14:30" />
+
+</RelativeLayout>
